# Frame-GL

./: .gitmodules  CMakeLists.txt
frame_gl/: CMakeLists.txt
frame_gl/include/frame_gl/: colors.h  error.h  math.h  quat.h  raw.h  tween.h
frame_gl/include/frame_gl/components/: Camera.h  ClickableArea.h  GUIClickable.h  GUICommandLine.h  GUIRect.h  Manipulate3D.h  MeshRenderer.h  RenderTarget.h  Transform.h
frame_gl/include/frame_gl/data/: FrameBuffer.h  Mesh.h  MeshFactory.h  Shader.h  Texture.h
frame_gl/include/frame_gl/gui/: GUIButton.h  GUIRect.h  GUISystem.h  GUITransform.h
frame_gl/include/frame_gl/systems/: ConsoleOverlay.h  DebugDraw.h  DisplayFPS.h  GUIOperator.h  Input.h  Manipulate3DOperator.h  Render.h  TransformDrag.h  UIText.h  Window.h
frame_gl/include/frame_gl/util/: DebugDraw.h
frame_gl/source/: FrameBuffer.cpp  Input.cpp  Mesh.cpp  MeshFactory.cpp  MeshRenderer.cpp  Planes.cpp  Render.cpp  Shader.cpp  Texture.cpp  Window.cpp  error.cpp  math.cpp
frame_gl_demo/: CMakeLists.txt
frame_gl_demo/include/frame_gl_demo/: factories.h
frame_gl_demo/include/frame_gl_demo/components/: Draggable.h  Firefly.h  FollowMouse.h  Manipulate3D.h  Rotisserie.h
frame_gl_demo/include/frame_gl_demo/systems/: DiagramVisualization.h  DisplayFPS.h  FireflyOperator.h  Manipulate3DOperator.h  Planes.h  RotisserieOperator.h
frame_gl_demo/source/: Planes.cpp  main.cpp
scripts/: build.sh  clean.sh  rebuild.sh
